feat: Judge连接服务器改为使用motor，用了很多黑魔法，来个人帮我写单测吧= =

--- a/secret.template.yml
+++ b/secret.template.yml
@@ -1,4 +1,5 @@
 db_auth: mongodb://localhost:27017/testOJ   # MongoDB连接认证串
+db_name: testOJ                             # 连接至的数据库名字，请务必与连接认证串提供的保持一致
 problem_dir: D:\SETU\Problems               # 存放题目数据的目录
 auth_salt: cndaikluwjhgaiklsduhfj           # Judger认证，用户认证使用的盐值
 jwt_key: fgbdeikusghkseht                   # jwt中签名使用的盐值
